# bmDCA

./: .gitignore  Doxyfile  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac
example/: README.md  bmdca.conf  bmdca_sample.conf
m4/: ax_cxx_compile_stdcxx.m4
src/: Makefile.am  adam.cpp  adam.hpp  adamw.cpp  adamw.hpp  arma_convert.cpp  bmdca.cpp  bmdca_sample.cpp  fasta_convert.cpp  generator.cpp  generator.hpp  graph.cpp  graph.hpp  mcmc.cpp  mcmc.hpp  mcmc_stats.cpp  model.cpp  model.hpp  msa.cpp  msa.hpp  msa_stats.cpp  msa_stats.hpp  original.cpp  original.hpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  process_msa.cpp  radam.cpp  radam.hpp  reparam.cpp  reparam.hpp  run.cpp  run.hpp  sample_stats.cpp  sample_stats.hpp  sampler.cpp  sampler.hpp  sgdm.cpp  sgdm.hpp  (+2 more)
tests/: globals  run_all.sh
tests/num2fasta/: run_test.sh  target.fasta
tests/process_msa/: correct_numerical.txt  correct_weights.txt  run_test.sh
tests/stop_start/: run_test.sh
tools/: rcparams
